Changelog
=========

8.6-dev - (unreleased)
----------------------
* Bug fix: fixed CSS and wording for "Dynamic geotags Coverage"
  [ghicaale refs #21458]

8.5 - (2014-09-15)
------------------
* Feature: added doctest for the workflow change event where EEAFigureFile
  objects get the same EffectiveDate from their parent EEAFigures
  [ichimdav refs #20827]

8.4 - (2014-06-06)
------------------
* Bug fix: Fix Eps to PNG converter
  [voineali refs #19830]

8.3 - (2014-05-13)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
    - RUN with www8 as a LAST step since it reindexes 7000 objects
    - [ichimdav #19367]
* Change: Data and EEAFigure now have an indexer that indexes the values of the
  location field if the value is part of the european countries vocabulary
  [ichimdav refs #19367]

8.2 - (2014-02-03)
------------------
* Bug fix: cleaned references of tooltip macro being loaded from dataset_view
  [ichimdav refs #18197]

8.1 - (2014-01-22)
------------------
* Bug fix: reference geotags macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: reference temporal-coverage macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Change: removed version pin of eea.themecentre from the plone4 buildout
  [ichimdav]
* Bug fix: check for truthiness of version_id when attempting to last version
  of an object for the Faceted Navigation WidgetFilter
  [ichimdav refs #17812]
* Change: removed the temporalCoverage field from the dataservice schema
  allowing the schemaextender from Products.EEAContentTypes to add the field
  [ichimdav refs #17611]

8.0 - (2013-12-10)
------------------
* Bug fix: correctly move the geographicalCoverage within the metadata tab
  for EEAFigure and Data
  [ichimdav refs #17663]
* Feature: added a possibility to define the map layer that should be used